--- a/index.html
+++ b/index.html
@@ -13,13 +13,18 @@
 
 
     <script>
-      //Your web app's Firebase configuration
-
-      // // Initialize Firebase
-      // firebase.initializeApp(firebaseConfig);
-
-    // Initialize Firebase
-    firebase.initializeApp(firebaseConfig);
+      // Your web app's Firebase configuration
+      var firebaseConfig = {
+        apiKey: "AIzaSyBE9uDw_-UzLP0oJq-AM5p7_pPaHgozk5c",
+        authDomain: "multiplayer-car-racing-g-b03c4.firebaseapp.com",
+        databaseURL: "https://multiplayer-car-racing-g-b03c4.firebaseio.com",
+        projectId: "multiplayer-car-racing-g-b03c4",
+        storageBucket: "multiplayer-car-racing-g-b03c4.appspot.com",
+        messagingSenderId: "1037251885428",
+        appId: "1:1037251885428:web:b4ee401070de7a7f1e9421"
+      };
+      // Initialize Firebase
+      firebase.initializeApp(firebaseConfig);
     </script>
 
     <script src="js/Player.js"></script>
